--- a/Style.css
+++ b/Style.css
@@ -4,8 +4,8 @@ body {
 
 @font-face { 
     font-family: "GerberaLight";
-    src: url("/home/biblio/Документы/Работа/Веб ресурс/Год педагога/fonts/GerberaLight.eot");
-    src: url("/home/biblio/Документы/Работа/Веб ресурс/Год педагога/fonts/GerberaLight.eot?#iefix")format("embedded-opentype"),
+    src: url("GerberaLight.eot");
+    src: url("GerberaLight.eot?#iefix")format("embedded-opentype"),
     url("/home/biblio/Документы/Работа/Веб ресурс/Год педагога/fonts/GerberaLight.woff") format("woff"),
     url("/home/biblio/Документы/Работа/Веб ресурс/Год педагога/fonts/GerberaLight.ttf") format("truetype");
     font-style: normal;
