--- a/Style.css
+++ b/Style.css
@@ -4,9 +4,9 @@ body {
 
 @font-face { 
     font-family: "GerberaLight";
-    src: url("GerberaLight.eot");
-    src: url("GerberaLight.eot?#iefix")format("embedded-opentype"),
-    url("GerberaLight.woff") format("woff"),
+    src: url("fonts/GerberaLight.eot");
+    src: url("fonts/GerberaLight.eot?#iefix")format("embedded-opentype"),
+    url("fonts/GerberaLight.woff") format("woff"),
     url("GerberaLight.ttf") format("truetype");
     font-style: normal;
     font-weight: 300;
