--- a/Style.css
+++ b/Style.css
@@ -4,10 +4,9 @@ body {
 
 @font-face { 
     font-family: "GerberaLight";
-    src: url("fonts/GerberaLight.eot");
-    src: url("fonts/GerberaLight.eot?#iefix")format("embedded-opentype"),
-    url("fonts/GerberaLight.woff") format("woff"),
-    url("GerberaLight.ttf") format("truetype");
+    src: url("../fonts/GerberaLight.eot");
+    src: url("../fonts/GerberaLight.eot?#iefix")format("embedded-opentype"),
+    url("../fonts/GerberaLight.woff") format("woff"),
     font-style: normal;
     font-weight: 300;
 }
