--- a/Style.css
+++ b/Style.css
@@ -176,7 +176,7 @@ margin-top: 5%;
     justify-content: center;
     background-color: #45a1ff;
     color: #fff;
-width: 98%;
+width: 368px;
   display: flex;
 position: absolute;
 margin-top: 80%;
