--- a/Adaps.css
+++ b/Adaps.css
@@ -1,21 +1,26 @@
 #slider{
-	width: 30%;
-	height: 70%;
-	margin-top: 20%;
+	
+	width: 368px;
+	height: 600px;
+	margin-top: 10%;
 	overflow: hidden;
 }
 
 #polosa {
-	width: 700%;
+	width: 5000px;
 	position: relative;
 	left: 0;
+	overflow: hidden;
 	transition: all ease 2s;
+	margin: 0 auto;
 }
 
 #polosa img{
+	overflow: hidden;
 	float: left;
-margin-right: 5%;
-margin-left: 2%;
+margin-right: 10%;
+  min-width: 368px;
+  max-width: 368px;
 }
 
 #polosa::after{
