--- a/Style.css
+++ b/Style.css
@@ -177,3 +177,9 @@ margin-right: 10%;
 margin-left: 10%;
 margin-top: 5%;
 }
+
+.pod{
+    width: 100%;
+    color: blue;
+    text-align: center;
+}
