--- a/Style.css
+++ b/Style.css
@@ -119,7 +119,7 @@ margin-left: 10%;
     text-align: center;
 margin-top: -25%;
 font-family: Montserrat,sans-serif;
-font-size: 1em;
+font-size: 18px;
 }
 
 .fancy 
