--- a/Style.css
+++ b/Style.css
@@ -28,6 +28,9 @@ body {
     width: 98%;
 }
 
+h1 {font-size: 1.5em
+}
+
 .img_books {
     margin-top: 30%;
 }
@@ -119,7 +122,7 @@ margin-left: 10%;
     text-align: center;
 margin-top: -25%;
 font-family: Montserrat,sans-serif;
-font-size: 18px;
+font-size: 1.5em;
 }
 
 .fancy 
